--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(prepare_edges)
 export(prepare_features_classification)
 export(prepare_features_components)
 export(prepare_gnps)
+export(prepare_isdb_lotus)
 export(prepare_library)
 export(prepare_lotus)
 export(prepare_params)
