adding possibility to work either with MGF or SQLite (WIP)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(weight_chemo)
 importFrom(CompoundDb,CompDb)
 importFrom(CompoundDb,Spectra)
 importFrom(CompoundDb,createCompDb)
+importFrom(CompoundDb,make_metadata)
 importFrom(MetaboAnnotation,CompareSpectraParam)
 importFrom(MetaboAnnotation,matchSpectra)
 importFrom(MsBackendMgf,MsBackendMgf)
