adding parallel processing of spectra

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,8 @@ export(replace_gnps_job_id)
 export(treat_names_sirius)
 export(weight_bio)
 export(weight_chemo)
+importFrom(BiocParallel,MulticoreParam)
+importFrom(BiocParallel,SerialParam)
 importFrom(CompoundDb,CompDb)
 importFrom(CompoundDb,Spectra)
 importFrom(CompoundDb,createCompDb)
@@ -148,6 +150,7 @@ importFrom(stringr,str_match)
 importFrom(stringr,str_remove)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
