--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(get_example_mgf)
 export(get_example_sirius)
 export(get_last_version_from_zenodo)
 export(get_params)
+export(harmonize_spectra)
 export(import_spectra)
 export(log_debug)
 export(parse_cli_params)
