--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.1.0)
 Imports:
+    BiocParallel
     CompoundDb,
     crayon,
     curl,
