--- a/.github/workflows/tima.yaml
+++ b/.github/workflows/tima.yaml
@@ -16,8 +16,8 @@ jobs:
       matrix:
         os: [
           'ubuntu-latest',
-          'macos-latest'
-          # 'windows-latest' ## low memory
+          'macos-latest',
+          'windows-latest'
         ]
     defaults:
       run:
@@ -35,4 +35,4 @@ jobs:
       - name: Run tests
         run: |
           cp -R config/default config/params
-          Rscript inst/scripts/tima.R
+          Rscript inst/scripts/tima.R mini
