--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -22,8 +22,8 @@ jobs:
         config:
           - { os: macOS-latest,   r: 'release' }
           - { os: windows-latest, r: 'release' }
-          - {os: ubuntu-latest,  r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,  r: 'release'}
+          # - { os: ubuntu-latest,  r: 'devel', http-user-agent: 'release' }
+          # - { os: ubuntu-latest,  r: 'release' }
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
