--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,21 +15,21 @@ BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
     R (>= 4.1.0)
 Imports:
-    BiocParallel,
-    CompoundDb,
+    bioc::BiocParallel,
+    bioc::CompoundDb,
     crayon,
     curl,
     data.table,
     docopt,
     dplyr,
     jsonlite,
-    MetaboAnnotation,
-    MsBackendMgf,
-    MsCoreUtils,
+    bioc::MetaboAnnotation,
+    bioc::MsBackendMgf,
+    bioc::MsCoreUtils,
     purrr,
     readr,
     rotl,
-    Spectra,
+    bioc::Spectra,
     stats,
     stringr,
     tibble,
