--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,30 +13,30 @@ License: GPL (>= 3)
 URL: https://github.com/taxonomicallyinformedannotation/tima-r, https://taxonomicallyinformedannotation.github.io/tima-r/
 BugReports: https://github.com/taxonomicallyinformedannotation/tima-r/issues
 Depends:
-    R (>= 4.1.0),
-    methods,
-    Biobase
+    R (>= 4.1.0)
 Imports:
-    BiocParallel,
-    CompoundDb,
     crayon,
     curl,
     data.table,
     docopt,
     dplyr,
     jsonlite,
-    MetaboAnnotation,
-    MsBackendMgf,
-    MsCoreUtils,
     purrr,
     readr,
     rotl,
-    Spectra,
     stats,
     stringr,
     tibble,
     tidyr,
     yaml
+Remotes:
+    bioc::BiocParallel,
+    bioc::CompoundDb,
+    bioc::MetaboAnnotation,
+    bioc::MsBackendMgf,
+    bioc::MsCoreUtils,
+    bioc::Spectra
+
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
