--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(dist_groups)
 export(export_output)
 export(export_params)
 export(export_spectra)
+export(export_spectra_2)
 export(extract_spectra)
 export(fake_edges)
 export(fake_features_components)
