--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Imports:
     MetaboAnnotation,
     MsBackendMgf,
     MsCoreUtils,
-    purrr,
+    purrr (>= 1.0.0),
     readr,
     rotl,
     Spectra,
