purrr 1.0 replace superseded flatten

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,7 +133,7 @@ importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(jsonlite,fromJSON)
-importFrom(purrr,flatten)
+importFrom(purrr,list_flatten)
 importFrom(purrr,map_df)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
