--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,11 @@ Imports:
     stringr,
     tibble,
     tidyr,
+    tidyselect,
+    utils,
     yaml
+Suggests:
+    testthat
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
