--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
 importFrom(stats,dist)
 importFrom(stats,setNames)
+importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_length)
 importFrom(stringr,str_match)
@@ -156,7 +157,10 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
-importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_rows)
+importFrom(tidyselect,where)
+importFrom(utils,combn)
+importFrom(utils,download.file)
+importFrom(utils,unzip)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
