code documentation improvement

--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -1,12 +1,10 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches:
-      - main
+    branches: [main, master]
   pull_request:
-    branches:
-      - main
+    branches: [main, master]
 
 name: R-CMD-check
 
@@ -20,10 +18,11 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { os: macOS-latest,   r: 'release' }
-          - { os: windows-latest, r: 'release' }
-          # - { os: ubuntu-latest,  r: 'devel', http-user-agent: 'release' }
-          # - { os: ubuntu-latest,  r: 'release' }
+          - {os: macos-latest,   r: 'release'}
+          - {os: windows-latest, r: 'release'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -44,7 +43,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck
+          extra-packages: any::rcmdcheck
+          needs: check
 
       - name: Additional step for tests to run
         run: |
@@ -53,22 +53,6 @@ jobs:
           cp -R config tests/testthat/config
           cp -R inst tests/testthat/inst
 
-        shell: bash
-
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--as-cran", "--ignore-vignettes","--no-manual","--no-examples","--no-tests")'
-          build_args: 'c("--no-build-vignettes", "--no-manual")'
-          error-on: '"error"'
-
-      - name: Show testthat output
-        if: always()
-        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
-        shell: bash
-
-      - name: Upload check results
-        if: failure()
-        uses: actions/upload-artifact@main
-        with:
-          name: ${{ runner.os }}-r${{ matrix.config.r }}-results
-          path: check
+          upload-snapshots: true
