--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -32,6 +32,7 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
+          pak-version: devel # See https://github.com/r-lib/actions/issues/559
 
       - name: Install package
         run: R CMD INSTALL .
