--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -25,6 +25,7 @@ jobs:
         with:
           extra-packages: any::covr
           needs: coverage
+          pak-version: devel # See https://github.com/r-lib/actions/issues/559
 
       - name: Additional step for tests to run
         run: |
