--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -45,6 +45,7 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+          pak-version: devel # See https://github.com/r-lib/actions/issues/559
 
       - name: Additional step for tests to run
         run: |
