--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,separate_rows)
 importFrom(tidyselect,where)
 importFrom(utils,combn)
