--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,9 +136,10 @@ importFrom(purrr,list_flatten)
 importFrom(purrr,map_df)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
+importFrom(readr,read_lines)
 importFrom(readr,read_tsv)
-importFrom(readr,write_csv)
 importFrom(readr,write_delim)
+importFrom(readr,write_lines)
 importFrom(readr,write_tsv)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
