--- a/config/default/prepare_features_classification.yaml
+++ b/config/default/prepare_features_classification.yaml
@@ -1,4 +1,11 @@
+#' The path of the input file. STRING
 input: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_filled.tsv.gz
+
+#' The path of the output file. STRING
 output: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_treated.tsv.gz
+
+#' The path of the library file used for metadata completion. STRING
 library: data/interim/libraries/library.tsv.gz
+
+#' Skip extensive metadata completion by filling with pre-computed values only. BOOLEAN
 quickmode: yes
