--- a/config/default/prepare_sirius.yaml
+++ b/config/default/prepare_sirius.yaml
@@ -1,3 +1,8 @@
+#' The path to the directory containing the sirius results. STRING
 directory: data/interim/annotations/example_sirius/
+
+#' Use NPClassifier classes instead of Classyfire ones. BOOLEAN
 npc: yes
+
+#' The path of the output file. STRING
 output: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_sirius_pretreated.tsv.gz
