spectral matching update, see https://github.com/rformassspectrometry/MetaboAnnotation/issues/93

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ importFrom(CompoundDb,Spectra)
 importFrom(CompoundDb,createCompDb)
 importFrom(CompoundDb,make_metadata)
 importFrom(MetaboAnnotation,CompareSpectraParam)
+importFrom(MetaboAnnotation,MatchForwardReverseParam)
 importFrom(MetaboAnnotation,matchSpectra)
 importFrom(MsBackendMgf,MsBackendMgf)
 importFrom(MsBackendMgf,readMgf)
