--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ importFrom(MsCoreUtils,nspectraangle)
 importFrom(Spectra,Spectra)
 importFrom(Spectra,export)
 importFrom(Spectra,filterIntensity)
+importFrom(Spectra,joinPeaksGnps)
 importFrom(Spectra,peaksData)
 importFrom(Spectra,spectraData)
 importFrom(crayon,blue)
